less/pace.less
.pace-running {
  .loader {
    opacity:1;
  }

  .content {
    opacity:0;
  }
}

.pace-done {
  .loader {
    opacity:0;

    &.page-not-found {
      opacity:1 !important;
    }
  }

  .content {
    opacity:1;
  }
}

.loader {
  -webkit-pointer-events: none;
  pointer-events: none; 
  -webkit-user-select: none; 
  -moz-user-select: none;
  user-select: none;
  z-index: 2000;
  position: fixed;
  height: 100%;
  width: 100%;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color:#26A65B;
  opacity: 1;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.loader .logo {
  position: fixed;
  z-index: 2000;
  display: block;
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width:100px;
  height:100px; 
  background-image: url('../img/logo.svg');
  background-size:100px 100px;
  animation: hover 0.5s alternate infinite ease-in-out; 
}

.loader .shadow {
  z-index: 2000;
  display: block;
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transform: translateY(30px);
  width: 40px;
  height: 5px;
  border-radius: 50%;
  background-color: darken(#26A65B,5%);
  animation: hoverShadow 0.5s alternate infinite ease-in-out;
}

@keyframes hover {
  from {
    transform: translateY(-50%);
  }
  
  to {
    transform: translateY(-75%);
  }
}

@keyframes hoverShadow {
  from {
    width:40px;
  }
  
  to {
    width:15px;
  }
}

.page-not-found h1 {
  display: block;
  position: absolute;
  margin: auto;
  text-align: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width:120px;
  height:50px;
  font-size:40px;
  font-weight:700;
  transform: translateY(80px);
  color: #fff;

}

